--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   font_awesome_flutter: ^10.1.0
   image_picker: ^0.8.5+3
-  firebase_storage: ^12.2.0
+  file_picker: ^5.0.0
   appwrite: ^12.0.4
   web_socket_channel: ^2.1.0
   google_maps_flutter: ^2.1.1
