--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.0
   shared_preferences: ^2.0.11
+  fl_chart: ^0.66.0
+  syncfusion_flutter_charts: ^24.1.41
 dev_dependencies:
   flutter_test:
     sdk: flutter
